--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.5.2",
     "gulp-connect": "^2.2.0",
+    "gulp-plumber": "^1.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
     "gulp-watch": "^4.2.0"
   },
   "dependencies": {
+    "babel": "^4.7.16",
     "react": "0.12.x",
     "react-router": "^0.12.4",
-    "reflux": "^0.2.7"
+    "reflux": "^0.2.7",
+    "route-pattern": "0.0.6"
   }
 }
